# fantasy-football

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml
.streamlit/: styles.css
assets/: references.txt
pages/: squad-builder.py
utils/: app_core.py  endpoints.py  model.py  model_core.py
