[tool.poetry]
name = "fantasy-football-manager"
version = "0.1.0"
description = ""
authors = ["nikerego <nikerego@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pyomo = "^6.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
