[tool.poetry]
name = "fantasy-football-manager"
version = "0.1.0"
description = ""
authors = ["nikerego <nikerego@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.7.3"
streamlit = "^1.37.0"
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
